@@ -1205,7 +1205,7 @@
 	      <property name="column_spacing">12</property>
 
 	      <child>
-		<widget class="GtkLabel" id="label6">
+		<widget class="GtkLabel" id="signature_tab">
 		  <property name="visible">True</property>
 		  <property name="label" translatable="yes">_Signatures:</property>
 		  <property name="use_underline">True</property>
