@@ -1,3 +1,10 @@
+2005-02-18  Nate Nielsen <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-gpgmex-util.c:
+    * src/seahorse-key-properties.c:
+    * src/seahorse-key-properties.glade: Fix Key Properties windows
+    for remote keys
+    
 2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add «nb» to ALL_LINGUAS.
